--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "npm": "^10.2.3",
+    "otp-generator": "^4.0.1",
     "passport": "^0.6.0",
     "passport-twitter": "^1.0.4",
     "userop": "^0.3.4",
@@ -42,6 +44,8 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.9.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/otp-generator": "^4.0.2",
     "@types/passport-twitter": "^1.0.40",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
