implemented google auth

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.7",
     "npm": "^10.2.3",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-twitter": "^1.0.4",
     "userop": "^0.3.4",
     "winston": "^3.11.0",
@@ -48,6 +49,7 @@
     "@types/node": "^20.9.0",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
+    "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-twitter": "^1.0.40",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
