edited example env

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ TWITTER_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+ETHERSCAN_PROVIDER_KEY=
+
 ACCESS_TOKEN=
 
 ACCESS_TOKEN_SECRET=
