--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
     "postinstall": "npx prisma generate",
     "start2": "ts-node src/index.ts",
@@ -52,9 +52,9 @@
     "@types/otp-generator": "^4.0.2",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-twitter": "^1.0.40",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "prisma": "^5.5.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
