--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       
     },
     "exclude": ["node_modules"],
-    "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/types"]
+    "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/types", "index.ts"]
   }
   
