--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "prod": "ts-node src/index.ts",
     "postinstall": "npx prisma generate",
     "start2": "ts-node src/index.ts",
     "dev2": "nodemon --exec ts-node src/index.ts",
@@ -17,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.5.2",
     "@types/passport": "^1.0.15",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -53,9 +52,9 @@
     "@types/otp-generator": "^4.0.2",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-twitter": "^1.0.40",
-    "nodemon": "^3.0.2",
-    "prisma": "^5.7.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.5.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
