crated cicd pipline

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,7 @@ GOOGLE_CLIENT_SECRET=
 
 ETHERSCAN_PROVIDER_KEY=
 
-ACCESS_TOKEN=
-
 ACCESS_TOKEN_SECRET=
 
 EMAIL_ACCESS_PASSWORD=
-user_email=
+USER_EMAIL=
