--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-twitter": "^1.0.4",
+    "ts-jest": "^29.1.1",
     "userop": "^0.3.4",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
