--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.10",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.9.0",
