--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mailchimp/mailchimp_transactional": "^1.0.50",
     "@prisma/client": "^5.5.2",
     "@types/passport": "^1.0.15",
     "axios": "^1.6.2",
@@ -49,7 +50,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.5",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.10.8",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "@types/passport-google-oauth2": "^0.1.8",
