--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-device-detector": "^2.0.18",
     "nodemailer": "^6.9.7",
     "npm": "^10.2.3",
     "passport": "^0.6.0",
